# auv_simulation

./: AUV_Controller.cpp  Altimeter.cpp  AnalogPressureSensor.cpp  CMakeLists.txt  PressureSensor.hpp  README.md  WaterDepthSimulation.cpp  WaterDepthSimulation.hpp  main.cpp
include/: AUV_Controller.hpp  Altimeter.hpp  AltimeterConnection.hpp  AnalogPressureSensor.hpp  DigitalPressureSensor.hpp  MissionOperation.hpp  MissionPlan.hpp  PressureSensor.hpp  PressureSensorConnection.hpp  ThrusterControl.hpp  WaterDepthSimulation.hpp
src/: AUV_Controller.cpp  Altimeter.cpp  AnalogPressureSensor.cpp  DigitalPressureSensor.cpp  MissionPlan.cpp  WaterDepthSimulation.cpp  main.cpp
